# vibrazioni

./: .gitignore  LICENSE  README.md  ietf-draft-difficulty-scan.py  ietf-draft-extract.py
afc-tools/: README.md  go.mod
brave-tools/: README.md  brave-history-dump.py
ffmpeg-play/shufflevid/: shufflevid.bash
git-tools/: git-add-fmt
gosec-json/: copy-skill.bash  gosec-json-extract.bash
gosec-json/skill-gosec-json-extract/: SKILL.md
govulncheck-json/: copy-skill.bash  govulncheck-json-extract.bash
govulncheck-json/skill-govulncheck-json-extract/: SKILL.md
html-scripttags/: F  README.md  copy-skill.bash  d  html-scripttags-extract.py  html-scripttags-extract_test.py
ietf-tools/: copy-skill.bash  ietf-draft-difficulty-scan.py  ietf-draft-extract.py
kiln/: .gitignore  MANIFEST.in  README.md  install.bash  pyproject.toml  setup.cfg
kiln/examples/basic-site/: site.yml
kiln/examples/basic-site/contents/: about.yml  index.yml
kiln/examples/basic-site/templates/: default.html
kiln/examples/mathjax-site/: README.md  site.yml
kiln/examples/mathjax-site/contents/: index.yml
kiln/examples/mathjax-site/static/css/: site.css
kiln/kiln/: __init__.py  cli.py  core.py
kiln/scripts/: deploy-kiln-zip-ssh.bash  manual-test-setup.bash
kiln/tests/: test_kiln.py
macos/: README.md
plan-doc/: copy-skill.bash  plan-doc-manage.py
pvta-tools/: Makefile  READTHISALL.txt  go.mod  go.sum  main.go
simplemix/: 80col  README.md  ask  linkedin-view-tracker  pickcols  ssh-loaded-keys  twask  zipxgit
wwlp-tools/: Makefile  README.md  go.mod
(+110 files in other folders)
