[metadata]
name = kiln
version = 0.1.0
description = MVP static site generator
long_description = file: README.md
long_description_content_type = text/markdown
author = mhlotto
author_email = mhlotto@users.noreply.github.com
license = Beerware
url = https://github.com/mhlotto/vibrazioni/tree/main/kiln

[options]
packages = find:
python_requires = >=3.9
install_requires =
    Jinja2
    MarkupSafe
    Markdown
    PyYAML

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    kiln = kiln.cli:main
